src/snapshots/phpvm__output__tests__doctor_human_output_snapshot.snap
---
source: src/output.rs
assertion_line: 855
expression: render_doctor_human(&sample_doctor_result())
---
Project Inspection
Project Type:   wordpress
PHP Constraint: ^8.1
Profile:        wordpress
Required:       mysqli
Recommended Matrix:
  8.1
  8.3
