src/snapshots/phpvm__output__tests__matrix_live_summary_snapshot.snap
---
source: src/output.rs
expression: "render_matrix_human(&sample_matrix_result(RunStatus::Fail), true)"
---
PHP Compatibility Matrix
8.2.28 details:
  exit 1

Overall: FAIL
