src/snapshots/phpvm__output__tests__release_check_live_summary_snapshot.snap
---
source: src/output.rs
expression: "render_release_check_human(&sample_release_check_result(), true)"
---
Release Compatibility Check
Detected:       laravel
PHP Constraint: ^8.2

Result: RELEASE BLOCKED
8.2.28 details:
  runtime missing
